--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -12,7 +12,7 @@ COPY . /app
 
 RUN ng build --prod --output-path=dist
 
-FROM nginx:1.19.3-alpine
+FROM nginx:latest
 
 COPY default.conf /etc/nginx/conf.d/
 
