--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-dom": "^16.13.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "e-care-common-data-services" :"^1.0.2"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1001.0",
