--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,9 +11,9 @@ jobs:
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - name: Build the Docker image
-        run: docker build -t myimage:latest .
+        run: docker build -t swmuir/myimage:latest .
       - name: Tag the Docker image
-        run: docker tag myimage:latest myimage:1.0
+        run: docker tag swmuir/myimage:latest myimage:1.0
       - name: Push the Docker image to the registry
-        run: docker push myimage:1.0
+        run: docker push swmuir/myimage:1.0
         
