--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,8 +12,6 @@ jobs:
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - name: Build the Docker image
         run: docker build -t swmuir/myimage:latest .
-      - name: Tag the Docker image
-        run: docker tag swmuir/myimage:latest myimage:1.0
       - name: Push the Docker image to the registry
-        run: docker push swmuir/myimage:1.0
+        run: docker push swmuir/myimage:latest
         
