--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,9 @@ jobs:
       - name: Push the Docker Production image to the registry
         if: "!github.event.release.prerelease"
         run: docker push swmuir/myimageprodcution:latest
+      - name: Build the Docker PreRelease image
+        if: "github.event.release.prerelease" 
+        run: docker build -t swmuir/myimageprodcution:latest .
+      - name: Push the Docker PreRelease image to the registry
+        if: "github.event.release.prerelease"
+        run: docker push swmuir/myimageprodcution:latest        
