--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,13 +12,13 @@ jobs:
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - name: Build the Docker Production image
         if: "!github.event.release.prerelease" 
-        run: docker build -t swmuir/myimageprodcution:latest .
+        run: docker build -t swmuir/mcc.ecare.clinician:latest .
       - name: Push the Docker Production image to the registry
         if: "!github.event.release.prerelease"
-        run: docker push swmuir/myimageprodcution:latest
+        run: docker push swmuir/mcc.ecare.clinician:latest
       - name: Build the Docker PreRelease image
         if: "github.event.release.prerelease" 
-        run: docker build -t swmuir/myimageprodcution:latest .
+        run: docker build -t swmuir/mcc.ecare.clinician:latest .
       - name: Push the Docker PreRelease image to the registry
         if: "github.event.release.prerelease"
-        run: docker push swmuir/myimageprodcution:latest        
+        run: docker push swmuir/mcc.ecare.clinician:latest        
