--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
         run: docker push swmuir/mcc.ecare.clinician:${{ github.event.release.tag_name }}
       - name: Build the Docker PreRelease image
         if: "github.event.release.prerelease" 
-        run: docker build -t swmuir/mcc.ecare.clinician:latest .
+        run: docker build -t  swmuir/mcc.ecare.clinician:${{ github.event.release.tag_name }}.pre .
       - name: Push the Docker PreRelease image to the registry
         if: "github.event.release.prerelease"
-        run: docker push swmuir/mcc.ecare.clinician:latest        
+        run: docker push swmuir/mcc.ecare.clinician:${{ github.event.release.tag_name }}.pre       
