--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,10 +13,12 @@ jobs:
       - name: Build the Docker Production image
         if: "!github.event.release.prerelease" 
         run: docker build -t swmuir/mcc.ecare.clinician:latest -t swmuir/mcc.ecare.clinician:${{ github.event.release.tag_name }} .
-      - name: Push the Docker Production image to the registry
+      - name: Push the Docker Production image to the registry (latest)
         if: "!github.event.release.prerelease"
         run: docker push swmuir/mcc.ecare.clinician:latest
-        run: docker push swmuir/mcc.ecare.clinician:${{ github.event.release.tag_name }}
+      - name: Push the Docker Production image to the registry (${{ github.event.release.tag_name }})
+        if: "!github.event.release.prerelease"
+        run: docker push swmuir/mcc.ecare.clinician:${{ github.event.release.tag_name }}        
       - name: Build the Docker PreRelease image
         if: "github.event.release.prerelease" 
         run: docker build -t  swmuir/mcc.ecare.clinician:${{ github.event.release.tag_name }}.pre .
