Updates for versioning
Pushed to 3.0.0
updated to eCarePlanner

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "providersmartapp",
-  "version": "1.3.0",
+  "name": "ecareplanner",
+  "version": "3.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
