--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 services:
   ecareplanner:
-    image: chroniccare/mccprovider:latest
+    image: chroniccare/ecareplanner:latest
     container_name: ecareplanner${MELD_SANDBOX_NAME}
     domainname: ecareplanner${MELD_SANDBOX_NAME}
     network_mode: default
     environment:
       - CLIENT_ID=${MELD_SANDBOX_CLIENT_ID}
+      - LOG_END_POINT_URI=https://log-mccecare-dev.ohsu.edu
+      - HHS_WARNING=false
     ports:
       - "80:80"
     restart: always
