--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "chartjs-plugin-annotation": "^0.5.7",
     "classlist.js": "^1.1.20150312",
     "clone": "^2.1.2",
+    "e-care-common-data-services": "^1.2.11",
+    "ecareplanner": "file:",
     "firebase": "^7.24.0",
     "flex-layout-srcs": "github:angular/flex-layout",
     "json-schema-to-typescript": "^8.2.0",
@@ -45,8 +47,7 @@
     "react-dom": "^16.13.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "e-care-common-data-services": "^1.2.10"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1001.0",
