Updates to SDS queries

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2",
-    "e-care-common-data-services": "1.4.7"
+    "e-care-common-data-services": "^1.6.0"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1001.0",
